--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=literalura
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/literalura
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
